--- a/app/src/main/res/layout/activity_crop_cultivation_manager.xml
+++ b/app/src/main/res/layout/activity_crop_cultivation_manager.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="4dp"
     tools:context=".activities.CropCultivationManagerActivity">
 
 
@@ -17,7 +18,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_marginBottom="10dp">
 
             <TextView
@@ -33,12 +34,13 @@
 
             <EditText
                 android:id="@+id/txt_crop_cultivate_date"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:ems="10"
-                android:hint="Enter"
+                android:hint="Enter.."
                 android:textSize="14sp"
+                android:inputType="none"
                 android:background="@drawable/input_shapes"
 
 
@@ -48,7 +50,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_marginBottom="15dp"
             >
 
@@ -64,12 +66,10 @@
 
             <Spinner
                 android:id="@+id/sp_crop_cultivate_operation"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimary"
                 android:textSize="14sp"
-                android:layout_weight="0.5"
-                android:layout_gravity="center"
                 android:entries="@array/crop_cultivate_operation"
                 android:background="@drawable/input_shapes"
 
@@ -79,14 +79,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_marginBottom="10dp">
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
                 android:text="@string/operator"
                 android:textStyle="bold"
                 android:textSize="16sp"
@@ -95,11 +94,10 @@
 
             <EditText
                 android:id="@+id/txt_crop_cultivate_operator"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
                 android:ems="10"
-                android:hint="Enter"
+                android:hint="Enter.."
                 android:textSize="14sp"
                 android:background="@drawable/input_shapes"
 
@@ -110,45 +108,63 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_marginBottom="10dp">
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
                 android:text="@string/fixed_cost"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:textColor="@color/colorPrimary"
                 />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:background="@color/gray_mh"
+                android:layout_marginBottom="10dp">
+
+           <TextView
+               android:id="@+id/crop_cost"
+               android:layout_width="wrap_content"
+               android:layout_height="match_parent"
+               android:text="@string/ugx"
+               android:layout_weight="0.1"
+               android:textSize="14sp"
+               android:textAlignment="center"
+               android:textStyle="bold"
+               android:gravity="center_vertical"
+
+               />
 
             <EditText
                 android:id="@+id/txt_crop_cultivate_fixed_cost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
                 android:ems="10"
-                android:hint="Enter"
+                android:hint="Enter.."
+                android:layout_weight="0.5"
+                android:inputType="number"
                 android:textSize="14sp"
                 android:background="@drawable/input_shapes"
 
-
                 />
-
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
                 android:text="@string/notes"
                 android:textStyle="bold"
                 android:textSize="16sp"
@@ -160,13 +176,13 @@
 
             <EditText
                 android:id="@+id/txt_crop_cultivate_notes"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:layout_weight="0.5"
                 android:inputType="textMultiLine"
                 android:background="@drawable/input_shapes"
-                android:hint="Enter"
+                android:hint="Enter.."
+                android:textSize="14sp"
 
 
                 />
