--- a/app/src/main/res/layout/activity_crop_soil_analysis_manager.xml
+++ b/app/src/main/res/layout/activity_crop_soil_analysis_manager.xml
@@ -4,9 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
     android:orientation="vertical"
     tools:context=".activities.CropSoilAnalysisManagerActivity">
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +21,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_marginBottom="10dp">
 
             <TextView
@@ -34,24 +37,30 @@
 
             <EditText
                 android:id="@+id/txt_crop_soil_analysis_date"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
                 android:ems="10"
-                android:hint="Enter"
+                android:hint="Enter.."
                 android:textSize="14sp"
                 android:background="@drawable/input_shapes"
+                android:inputType="none"
 
 
                 />
 
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="10dp">
+            android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp">
 
             <TextView
 
@@ -70,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:ems="10"
-                android:hint="Enter"
+                android:hint="Enter.."
                 android:inputType="numberDecimal"
                 android:textSize="14sp"
                 android:background="@drawable/input_shapes"
@@ -79,60 +88,72 @@
                 />
 
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="10dp">
-
-            <TextView
-
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="@string/organic_matter"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
-                />
+                android:orientation="vertical"
+                android:layout_marginBottom="10dp">
 
-            <EditText
-                android:id="@+id/txt_crop_soil_analysis_organic_matter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:ems="10"
-                android:inputType="numberDecimal"
-                android:hint="Enter"
-                android:textSize="14sp"
-                android:background="@drawable/input_shapes"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/organic_matter"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:background="@color/gray_mh"
+                    >
+
+                    <EditText
+                        android:id="@+id/txt_crop_soil_analysis_organic_matter"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/input_shapes"
+                        android:ems="10"
+                        android:hint="Enter.."
+                        android:inputType="numberDecimal"
+                        android:textSize="14sp"
 
 
-                />
-            <TextView
+                        />
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="%"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
-                android:labelFor="@+id/txt_crop_soil_analysis_organic_matter"
-                />
+                    <TextView
 
+                        android:layout_width="76dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.4"
+                        android:textAlignment="center"
+                        android:labelFor="@+id/txt_crop_soil_analysis_organic_matter"
+                        android:text="%"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_marginBottom="10dp">
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.4"
                 android:text="@string/agronomist"
                 android:textStyle="bold"
                 android:textSize="16sp"
@@ -141,11 +162,10 @@
 
             <EditText
                 android:id="@+id/txt_crop_soil_analysis_agronomist"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
                 android:ems="10"
-                android:hint="Enter"
+                android:hint="Enter.."
                 android:textSize="14sp"
                 android:background="@drawable/input_shapes"
 
@@ -156,47 +176,66 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_marginBottom="10dp">
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.7"
                 android:text="@string/cost"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:textColor="@color/colorPrimary"
                 />
-
-            <EditText
-                android:id="@+id/txt_crop_soil_analysis_cost"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:ems="10"
-                android:inputType="numberDecimal"
-                android:hint="Enter"
-                android:textSize="14sp"
-                android:background="@drawable/input_shapes"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:background="@color/gray_mh"
+                android:layout_marginBottom="10dp">
 
+                <TextView
+                    android:id="@+id/crop_cost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="@string/ugx"
+                    android:layout_weight="0.1"
+                    android:textSize="14sp"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:gravity="center_vertical"
 
-                />
+                    />
 
+                <EditText
+                    android:id="@+id/txt_crop_soil_analysis_cost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Enter.."
+                    android:layout_weight="0.5"
+                    android:inputType="number"
+                    android:textSize="14sp"
+                    android:background="@drawable/input_shapes"
+
+                    />
+            </LinearLayout>
         </LinearLayout>
+
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:layout_marginBottom="10dp">
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.7"
                 android:text="@string/results"
                 android:textStyle="bold"
                 android:textSize="16sp"
@@ -208,13 +247,13 @@
 
             <EditText
                 android:id="@+id/txt_crop_soil_analysis_results"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
                 android:ems="10"
-                android:layout_weight="0.3"
                 android:inputType="textMultiLine"
                 android:background="@drawable/input_shapes"
-                android:hint="Enter"
+                android:hint="Enter.."
+                android:gravity="start"
 
                 />
 
@@ -234,7 +273,7 @@
 
     </LinearLayout>
 
-
+</ScrollView>
 
 
 </LinearLayout>
