--- a/app/src/main/res/layout/content_crop_inventory_fertilizer_manager.xml
+++ b/app/src/main/res/layout/content_crop_inventory_fertilizer_manager.xml
@@ -41,7 +41,7 @@
                         android:layout_weight="0.3"
                         android:hint="Select"
                         android:background="@drawable/input_shapes"
-
+                        android:inputType="none"
                         android:textSize="14sp" />
 
                 </LinearLayout>
@@ -307,40 +307,61 @@
 
                 </LinearLayout>
             </LinearLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
-                android:orientation="horizontal">
-
-
+                android:orientation="vertical"
+                android:layout_marginBottom="10dp">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Cost"
-                    android:layout_weight="0.8"
 
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cost"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
                     android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
-
-                <EditText
-                    android:id="@+id/txt_crop_fertilizer_unit_cost"
+                    />
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Enter.."
-                    android:text="@string/default_numeric_value"
-                    android:inputType="numberDecimal"
-                    android:background="@drawable/input_shapes"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:background="@color/gray_mh"
+                    android:layout_marginBottom="10dp">
 
-                    android:layout_weight="0.2"
-                    android:textSize="14sp"
-                    android:visibility="visible" />
+                    <TextView
+                        android:id="@+id/crop_cost"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="@string/ugx"
+                        android:layout_weight="0.1"
+                        android:textSize="14sp"
+                        android:textAlignment="center"
+                        android:textStyle="bold"
+                        android:gravity="center_vertical"
 
+                        />
 
+                    <EditText
+                        android:id="@+id/txt_crop_fertilizer_unit_cost"
+                        android:text="@string/default_numeric_value"
 
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:hint="Enter.."
+                        android:layout_weight="0.5"
+                        android:inputType="number"
+                        android:textSize="14sp"
+                        android:background="@drawable/input_shapes"
+
+                        />
+                </LinearLayout>
             </LinearLayout>
+
+
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
